2006-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/29695
	* fold-const.c (fold_ternary): Fix A < 0 ? <sign bit of A> : 0
	simplification.

2006-11-02  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (sparc-sun-solaris2*): Update GMP/MPFR build
	instructions.
	(sparc64-sun-solaris2*): Likewise.

2006-11-02  Zdenek Dvorak <dvorakz@suse.cz>

	PR tree-optimization/27891
	* tree-ssa-loop-ivopts.c (rewrite_use_outer): Do not insert code
	on abnormal edge.

2006-11-01  David Edelsohn  <edelsohn@gnu.org>
	    Ian Lance Taylor  <ian@airs.com>

	PR middle-end/29250
	* expr.c (expand_expr_real_1) <NON_LVALUE_EXPR, NOP_EXPR,
	CONVERT_EXPR>: Change EXPAND_SUM modifier to EXPAND_NORMAL when
	recursing.

2006-11-01  Chris Johns <chris@contemporary.net.au>

	PR bootstrap/28400
	* Makefile.in (install-driver): Use exeext when installing
	$target-gcc-$version.
	
2006-11-01  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/28970
	* loop.c (loop_giv_reduce_benefit): Take the max of the addition
	cost on all the increments of the BIV.

2006-11-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* builtins.def (gamma, lgamma): Use ATTR_MATHFN_FPROUNDING_STORE.

2006-10-31  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/29631
	* loop.c (basic_induction_var): Add new parameter inner_mode.
	<PLUS>: If set, convert the increment to it before sign-extending.
	<CONST_INT>: Likewise.
	<SUBREG>: Set it.
	<ASHIFTRT>: Likewise.  Return 0 if flag_wrapv.
	(check_insn_for_bivs): Pass VOIDmode as inner_mode to above.

2006-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/29637
	* tree.c (make_vector_type): Don't recurse if TYPE_MAIN_VARIANT
	of the innertype is the innertype itself.

2006-10-28 Uros Bizjak <uros@kss-loka.si>

	PR target/29377
	* config/h8300/h8300.c (h8300_emit_stack_adjustment): Change "size"
	argument to HOST_WIDE_INT.  Update function prototype.
	(round_frame_size): Change return type to HOST_WIDE_INT.  Change