@@ -1,3 +1,8 @@
+2006-11-07  Jie Zhang  <jie.zhang@analog.com>
+
+	* gcc.c (process_command): Treat -b as normal switch if its argument
+	has no dash.
+
 2006-11-05  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/29695
